fixed white spacing

--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ nav li a {
     margin-left: auto;
     margin-right: auto;
     width: 800px;
+    margin-bottom: 5em;
   }
 
  .sect1 p {
@@ -85,14 +86,14 @@ nav li a {
   .sect2 img {
     width: 500px;
     float: right;
-    margin-top: 3em;
     margin-right: 25%;
+    margin-bottom: 8em;
   }
 
 .sect2 h3 {
     text-align: center;
     margin-right: 46%;
-    margin-top: 8em;
+    margin-top: 5em;
     font-size: 20px;
 }
 
@@ -106,18 +107,24 @@ nav li a {
 
 
 
+.sect3 h3 {
+    text-align: center;
+    font-size: 20px;
+    clear: both;
+    margin-left: 5.5em;
+}
+
 .sect3 p {
     clear: both;
     width: 25%;
     float: right;
     margin-right: 25%;
-    margin-top: 10em;
     font-size: 20px;
 }
 
 .sect3 img {
     width: 500px;
     float: left;
-    margin-top: 10em;
+    margin-top: em;
     margin-left: 25%;
 }
